rest: added workflows filtering parameters
addresses https://github.com/reanahub/reana-ui/issues/132
